--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -1,10 +1,5 @@
-<html>
-
-<head>
-
-</head>
-
-<body>
+{% extends 'base.html' %}
+{% block content %}
     {% for exoplanet in exoplanets %}
        {{exoplanet.planet_name}}
        {{exoplanet.discovery_date}}
@@ -14,6 +9,4 @@
        {{exoplanet.mass}}
        {{exoplanet.thoughts}}
     {% endfor %}
-</body>
-
-</html>
+{% endblock %}
