Deleted default template from README.md

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
   {% for favourite_exoplanet in favourite_exoplanets %}
-    {{ favourite_exoplanet.planet_name }}
-    {{ favourite_exoplanet.discovery_date }}
-    {{ favourite_exoplanet.distance_from_earth}}
-    {{ favourite_exoplanet.type}}
-    {{ favourite_exoplanet.star_system}}
-    {{ favourite_exoplanet.mass}}
+    {{ favourite_exoplanet.planet_name }}<br>
+    {{ favourite_exoplanet.discovery_date }}<br>
+    {{ favourite_exoplanet.distance_from_earth}}<br>
+    {{ favourite_exoplanet.type}}<br>
+    {{ favourite_exoplanet.star_system}}<br>
+    {{ favourite_exoplanet.mass}}<br>
     {{ favourite_exoplanet.thoughts}}
 {% endfor %}
 {% endblock %}
