Added link for deleting exoplanet from favourites list

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -8,5 +8,6 @@
     {{ favourite_exoplanet.star_system}}<br>
     {{ favourite_exoplanet.mass}}<br>
     {{ favourite_exoplanet.thoughts}}
+    <a href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}">Delete From Favourites</a><br>
 {% endfor %}
 {% endblock %}
