--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<div>
+  <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+</div>
   {% for favourite_exoplanet in favourite_exoplanets %}
     {{ favourite_exoplanet.planet_name }}<br>
     {{ favourite_exoplanet.discovery_date }}<br>
