--- a/templates/rocky_planets.html
+++ b/templates/rocky_planets.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<div>
+  <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+</div>
 {% for rocky_planet in rocky_planets %}
     {{ rocky_planet.planet_name }}
     {{ rocky_planet.discovery_date }}
