Gave id of 'detailed' to exoplanet's details

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -5,7 +5,7 @@
 </div>
 <div class="container">
 <div class="row">
-<div class="col-12">
+<div class="col-12 detailed">
   {{ detailed_exoplanet.planet_name }}<br>
   {{ detailed_exoplanet.discovery_date }}<br>
   {{ detailed_exoplanet.distance_from_earth }}<br>                                       
