--- a/templates/gas_giants_planets.html
+++ b/templates/gas_giants_planets.html
@@ -3,13 +3,19 @@
 <div>
   <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
 </div>
+<div class="container">
+<div class="row">
 {% for gas_giant in gas_giants_planets %}
-    {{ gas_giant.planet_name }}
-    {{ gas_giant.discovery_date }}
-    {{ gas_giant.distance_from_earth}}
-    {{ gas_giant.type}}
-    {{ gas_giant.star_system}}
-    {{ gas_giant.mass}}
-    {{ gas_giant.thoughts}}
+    <div class="col-3">
+    {{ gas_giant.planet_name }}<br>
+    {{ gas_giant.discovery_date }}<br>
+    {{ gas_giant.distance_from_earth}}<br>
+    {{ gas_giant.type}}<br>
+    {{ gas_giant.star_system}}<br>
+    {{ gas_giant.mass}}<br>
+    {{ gas_giant.thoughts}}<br>
+    </div>
 {% endfor %}
+</div>
+</div>
 {% endblock %}
