--- a/templates/favourite_gas_giants.html
+++ b/templates/favourite_gas_giants.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div>
   <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+  <a href="{{ url_for('favourite_rocky_planets') }}">Rocky Planets</a>
 </div>
 <div class="container">
 <div class="row">
