--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div>
   <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+  <a href="{{ url_for('favourite_gas_giants') }}">Gas Giants</a>
 </div>
 <div class="container">
 <div class="row">
