--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -3,6 +3,7 @@
    <div>
    <a href="{{ url_for('rocky_planets') }}">Rocky Planets</a>
    <a href="{{ url_for('gas_giants_planets') }}">Gas Giants</a>
+   <a href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
    </div>
    <div class="container">
     <div class="row">
