--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
         <a class="nav-link" href="{{ url_for('favourite_list') }}">Favourites List</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Calculate Weight</a>
       </li>
     </ul>
