Created link for calculate_weight section

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -12,7 +12,7 @@
   {{ detailed_exoplanet.type }}<br>
   {{ detailed_exoplanet.star_system }}<br>
   {{ detailed_exoplanet.mass }}<br>
-  {{ detailed_exoplanet.thoughts }}
+  {{ detailed_exoplanet.thoughts }}<br>
 </div>
 </div>
 </div>
