Added default text to display your weight on the exoplanet

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ exoplanet_name }}
-{{ your_weightExoplanet }}
+
+<p>On the surface of {{ exoplanet_name }} you weight {{ your_weightExoplanet }} kg.</p>
+
 {% endblock %}
