--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<p>On the surface of {{ exoplanet_name }} you weight {{ your_weightExoplanet }} kg.</p>
+<div class="container">
+	<div class="row">
+		<div class="col-12">
+			<p>On the surface of {{ exoplanet_name }} you weight {{ your_weightExoplanet }} kg.</p>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
