--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('base') }}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
@@ -30,7 +30,6 @@
     </ul>
   </div>
 </nav>
-<h1 id="title">Other Worlds</h1>
     {% block content %}
     {% endblock %}
 </body>
