--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,16 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+#title_container {
+    text-align: center;
+    margin-top: 20%;
+}
+
 #detailed {
     text-align: center;
 }
+
+
+
