--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,16 @@
 body {
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 #title_container {
     text-align: center;
     margin-top: 16%;
+}
+
+#main_button {
+    margin-top: 10%;
 }
 
 #detailed {
