Gave class of  exoplanets_holder to the div holding each exoplanet

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -14,7 +14,7 @@
     <div class="row">
     {% for exoplanet in exoplanets %}
         <div class="col-4">
-       <div id="exoplanets_holder">
+       <div class="exoplanets_holder">
              {{exoplanet.planet_name}}<br>
              {{exoplanet.discovery_date}}<br>
              {{exoplanet.distance_from_earth}}<br>
