--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -15,6 +15,7 @@
     {% for exoplanet in exoplanets %}
         <div class="col-4">
        <div class="exoplanets_holder">
+             <img src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
              {{exoplanet.planet_name}}<br>
              {{exoplanet.discovery_date}}<br>
              {{exoplanet.distance_from_earth}}<br>
