--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
+<div id="exoplanet_weight_container" class="container">
 	<div class="row">
 		<div class="col-12">
 			<p>On the surface of {{ exoplanet_name }} you weight {{ your_weightExoplanet }} kg.</p>
