--- a/templates/already_favourite.html
+++ b/templates/already_favourite.html
@@ -8,7 +8,7 @@
    <div id="exoplanets_container" class="container">
    <div id="exoplanets_title" class="row">
    <div class="col-12">
-   <p>{{ favourite.planet_name }} is already added to favourites</p>
+   <p>you have already added {{ favourite.planet_name }} to your favourites list.</p>
              </div>
        </div>
         </div>
