Enclosed exoplanet properties into a separate row

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -11,7 +11,12 @@
 </div>
 <div id="exoplanet_display" class="row">
 <div id="detailed" class="col-12">
-  <img src="{{ detailed_exoplanet.exoplanet_image }}" width="50%" height="60%" alt=""><br>
+  <img src="{{ detailed_exoplanet.exoplanet_image }}" width="50%" height="100%" alt=""><br>
+  </div>
+  </div>
+<div class="row">
+<div class="col-12">
+<div id="properties_container">
   {{ detailed_exoplanet.planet_name }}<br>
   {{ detailed_exoplanet.discovery_date }}<br>
   {{ detailed_exoplanet.distance_from_earth }}<br>                                       
@@ -19,6 +24,7 @@
   {{ detailed_exoplanet.star_system }}<br>
   {{ detailed_exoplanet.mass }}<br>
   {{ detailed_exoplanet.thoughts }}<br>
+</div>
 </div>
 </div>
 </div>
