--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -6,8 +6,8 @@
    <a href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
    </div>
    <div id="exoplanets_container" class="container">
-   <div id="exoplanets_title" class="row">
-   <div class="col-12">
+   <div class="row">
+   <div style="text-align:center" class="col-12">
    <h1>exoplanets</h1>
    </div>
    </div>
