Inserted button tag into anchor from the main action button

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
 	<div class="row">
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
-			<h2>brief guide to exoplanets</h2>
-			<a id="main_button" href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+			<h2 id="sub_title">brief guide to exoplanets</h2>
+			<a id="main_button" href="{{ url_for('exoplanets_display') }}"><button id="home_action_button">Exoplanets</button></a>
 		</div>
 	</div>
 </div>
