--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     font-size: 16px;
     background-color: #1e2761;
-    color: #e5e5dc;
+    color: #ffffff;
     font-family: 'Kufam', cursive;
 }
 
@@ -18,6 +18,7 @@ body {
 
 .buttons {
     font-family: 'Roboto Slab', sans-serif;
+    background-color: #7a2048;
 }
 
 /* home page starts here */
@@ -32,7 +33,7 @@ body {
 }
 
 #home {
-    background-image: url(../images/outerspace.jpg);
+    background-image: url(../images/blue_universe.jpg);
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
@@ -68,6 +69,7 @@ body {
     height: 2.5rem;
     font-size: 1.3rem;
     padding-top: 0;
+    color: #ffffff;
 }
 
 
@@ -96,7 +98,6 @@ body {
 }
 
 .exoplanets_display_buttons {
-    background-color: #7a2048;
     color: #e5e5dc;
     font-size: 84%;
     width: 8rem;
