--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -20,7 +20,7 @@
              <p class="exoplanet_properties">type: {{exoplanet.type}}</p><hr class="separator">
              <p class="exoplanet_properties">start system: {{exoplanet.star_system}}</p><hr class="separator">
              <div class="centered_buttons">
-             <a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}" id="margin-left"><button class="exoplanets_display_buttons buttons">Add To Favourites</button></a>
+             <a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}" id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
              <a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}" id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
              </div>
        </div>
