--- a/templates/already_favourite.html
+++ b/templates/already_favourite.html
@@ -6,8 +6,8 @@
 			<div id="message">
 				<p>you have already added {{ favourite.planet_name }} to your favourites list.</p>
                 <div style="margin-top: 4rem;">
-                <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons">back</button></a>
-                <a href="{{ url_for('favourite_list') }}"><button class="action_buttons">favourites</button></a>
+                <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
+                <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
                 </div>
 			</div>
 		</div>
