--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     font-size: 16px;
     background-color: #1e2761;
-    color: #ffffff;
+    color: #e5e5dc;
     font-family: 'Kufam', cursive;
 }
 
@@ -47,9 +47,9 @@ body {
 #title_container {
     text-align: center;
     margin-top: 20%;
-    color: #ffffff;
     font-family: 'Roboto Slab', sans-serif;
     font-weight: 400;
+    color: #e5e5dc;
 }
 
 #title {
@@ -70,7 +70,7 @@ body {
     height: 2.5rem;
     font-size: 1.3rem;
     padding-top: 0;
-    color: #ffffff;
+    color: #e5e5dc;
 }
 
 
@@ -84,10 +84,20 @@ body {
    margin-top: 5rem;
 }
 
+#title_exoplanet_page {
+    letter-spacing: .5rem;
+    text-transform: uppercase;
+    font-family: 'Roboto Slab', sans-serif;
+}
+
 .exoplanets_holder {
     border: 1px solid #1d1e1f;
     margin-bottom: 2rem;
     background-color: #408ec6;
+}
+
+#exoplanet_name {
+    margin-top: 5%;
 }
 
 .separator {
@@ -95,7 +105,9 @@ body {
 }
 
 .exoplanet_properties {
+    margin-top: 5%;
     padding-left: .5rem;
+    letter-spacing: .2rem;
 }
 
 .exoplanets_display_buttons {
