--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -8,7 +8,7 @@
    <div id="exoplanets_container" class="container">
    <div class="row">
    <div style="text-align:center" class="col-12">
-   <h1>exoplanets</h1>
+   <h1 id="title_exoplanet_page">exoplanets</h1>
    </div>
    </div>
     <div class="row">
@@ -16,9 +16,9 @@
         <div class="col-4">
        <div class="exoplanets_holder">
              <img src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
-             <p class="exoplanet_properties">name: {{exoplanet.planet_name}}</p><hr class="separator">
-             <p class="exoplanet_properties">type: {{exoplanet.type}}</p><hr class="separator">
-             <p class="exoplanet_properties">start system: {{exoplanet.star_system}}</p><hr class="separator">
+             <p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p><hr class="separator">
+             <p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p><hr class="separator">
+             <p class="exoplanet_properties"><strong>Star System: {{exoplanet.star_system}}</strong></p><hr class="separator">
              <div class="centered_buttons">
              <a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}" id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
              <a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}" id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
