--- a/templates/calculate_weight.html
+++ b/templates/calculate_weight.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {{ exoplanet.planet_name }}
-<div class="container">
+<div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div class="col-12">
 			<form action="{{ url_for('calculate', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name) }}" method="POST">
