--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -1,37 +1,42 @@
 {% extends 'base.html' %}
 {% block content %}
-   <div>
-   <a href="{{ url_for('rocky_planets') }}">Rocky Planets</a>
-   <a href="{{ url_for('gas_giants_planets') }}">Gas Giants</a>
-   </div>
-   <div id="exoplanets_container" class="container">
-   <div class="row">
-   <div style="text-align:center" class="col-4">
-   <a href="{{ url_for('rocky_planets') }}"><button class="buttons">Rocky Planets</button></a>
-   </div>
-   <div style="text-align:center" class="col-4">
-   <h1 id="title_exoplanet_page">exoplanets</h1>
-   </div>
-   <div style="text-align:center" class="col-4">
-   <a href="{{ url_for('gas_giants_planets') }}"><button class="buttons">Gas Giants</button></a>
-   </div>
-   </div>
-    <div class="row">
-    {% for exoplanet in exoplanets %}
-        <div class="col-4">
-       <div class="exoplanets_holder">
-             <img src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
-             <p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p><hr class="separator">
-             <p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p><hr class="separator">
-             <p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}}</p><hr class="separator">
-             <div class="centered_buttons">
-             <a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}" id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
-             <a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}" id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
-             </div>
-       </div>
-        </div>
-     
-    {% endfor %}
-    </div>
-   </div>
+<div>
+	<a href="{{ url_for('rocky_planets') }}">Rocky Planets</a>
+	<a href="{{ url_for('gas_giants_planets') }}">Gas Giants</a>
+</div>
+<div id="exoplanets_container" class="container">
+	<div class="row">
+		<div style="text-align:center" class="col-4">
+			<a href="{{ url_for('rocky_planets') }}"><button class="buttons">Rocky Planets</button></a>
+		</div>
+		<div style="text-align:center" class="col-4">
+			<h1 id="title_exoplanet_page">exoplanets</h1>
+		</div>
+		<div style="text-align:center" class="col-4">
+			<a href="{{ url_for('gas_giants_planets') }}"><button class="buttons">Gas Giants</button></a>
+		</div>
+	</div>
+	<div class="row">
+		{% for exoplanet in exoplanets %}
+		<div class="col-4">
+			<div class="exoplanets_holder">
+				<img src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
+				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}}</p>
+				<hr class="separator">
+				<div class="centered_buttons">
+					<a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}"
+						id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
+					<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
+						id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
+				</div>
+			</div>
+		</div>
+
+		{% endfor %}
+	</div>
+</div>
 {% endblock %}
