Gave class of 'main_action_buttons' to action buttons from the top of the page

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 <div style="margin-top:5rem" class="container">
+<div class="row">
+<div style="text-align:center" class="col-12">
+<h1 class="title_exoplanet_page">favourites list</h1>
+</div>
+</div>
 	<div class="row">
-		<div class="col-6">
+		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">Exoplanets</button></a>
 		</div>
-		<div class="col-3">
+		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
 				<button class="buttons">Rocky Planets</button>
 			</a>
 		</div>
-		<div class="col-3">
+		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
 				<button class="buttons">Gas Giants</button>
 			</a>
