Gave class of 'main_action_buttons' to action buttons from the top of the page

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -6,13 +6,13 @@
 </div>
 <div id="exoplanets_container" class="container">
 	<div class="row">
-		<div style="text-align:center" class="col-4">
+		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('rocky_planets') }}"><button class="buttons">Rocky Planets</button></a>
 		</div>
-		<div style="text-align:center" class="col-4">
-			<h1 id="title_exoplanet_page">exoplanets</h1>
+		<div class="col-4 main_action_buttons">
+			<h1 class="title_exoplanet_page">exoplanets</h1>
 		</div>
-		<div style="text-align:center" class="col-4">
+		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('gas_giants_planets') }}"><button class="buttons">Gas Giants</button></a>
 		</div>
 	</div>
